[package]
name = "websocket_channels"
version = "0.0.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies]
async-trait = "0.1"
futures = "0.3.0"
rocket = { path = "../../core/lib" }

[dependencies.tokio]
version = "0.2.9"
features = ["fs", "io-std", "io-util", "rt-threaded", "sync", "signal", "macros"]

[dependencies.rocket_contrib]
path = "../../contrib/lib"
default-features = false
features = ["handlebars_templates"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]